--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -35,3 +35,8 @@
         animation-play-state: paused;
     }
 }
+
+@media screen and (min-width: $desktop) {
+    .about{
+        height: 730px;
+    }}
