--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -54,4 +54,11 @@
 	animation: 5s ease-out infinite normal;
 }
 
+@media screen and (min-width: $desktop){
+ .hero{
+	height: 150vh;
+ }
+ .hero__icon-wrapper{
+	top: 340px }
 
+}
