--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,7 +2,7 @@
 header{
     position: absolute;
     padding: 0 80px;
-    width: $desktop;
+    width: 1200px;
     top: 0;
     left: 50%;
    transform: translateX(-50%);
@@ -67,4 +67,10 @@ nav{
         }
         }
        
+}
+
+@media screen and (min-width: $desktop){
+    header{
+        width: 100%;
+    }
 }
